Removed the JDK 1.5 specific stuff
git-svn-id: https://svn.apache.org/repos/asf/webservices/rampart/trunk/java@654809 13f79535-47bb-0310-9956-ffa450edef68